--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,57 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+body {
+    display: flex;
+    margin: 0;
+    min-height: 100vh;
+    font-family: courier, sans-serif;
+    flex-direction: column;
+}
+
+#image-container {
+    position: relative;
+    background-color: #60B8DA;
+}
+
+img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+   
+}
+
+#logo-container {
+    background-color: #030303;
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    top: 15%;
+    opacity: 50%;
+}
+
+#sign-up-container {
+    color: ;
+}
+
+
+
+@media only screen and (min-width: 700px) {
+    body {
+        flex-direction: row;
+    }
+
+    #image-container {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    img {
+        max-width: 100%;
+        width: auto;
+       
+    }
+}
