--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ p {
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    margin: 5rem 0;
+    margin: 50px 0;
 }
 
 input {
@@ -95,6 +95,48 @@ input:focus  {
 input::placeholder {
     font-size: 12px;
 }
+
+#submit-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+
+#submit-button-container,
+#log-in-container {
+    display: flex;
+    width: 50%;
+    margin-bottom: 15px;
+}
+
+button {
+    background-color: #60B8DA;
+    color: #FFFFFF;
+    font-family: inherit;
+    font-size: 24px;
+    flex: 1;
+    border: none;
+    border-radius: 5px;
+    padding: 20px 10px;
+    transition: background-color 0.1s;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #153a5b;
+}
+
+a {
+    text-decoration: none;
+    color: #60B8DA;
+    font-weight: 600;
+}
+
+
+
+
 
 
 
@@ -129,16 +171,21 @@ input::placeholder {
     #row {
         display: flex;
         justify-content: space-between;
-        padding: 25px 50px;
+        padding: px 50px;
     }
 
     label {
-        width: 16rem;
+        width: 300px;
         display: flex;
         flex-wrap: wrap;
     }
     p {
         align-items: flex-start;
-        margin: 2.5rem 0;
+        margin: 20px 0;
+    }
+
+    #submit-section {
+        padding: 25px 50px;;
+        align-items: flex-start;
     }
 }
